Crash on duplicating material #52391

Closed
opened 2017-08-14 08:56:54 +02:00 by Tim Lichtenberg · 7 comments

System Information
Windows 7 64-Bit, Zotac GeForce GTX 1080 Ti, 11 GB, I7-4790K, 32 GB RAM

Blender Version
Broken: 2.79 RC 64-Bit, 2017-08-13, Hash: a8fbe99 (applies also to the previous RC of 2.79)
Worked: 2.78.5

Short Description
When duplicating a material, blender crashes instantly without any message.
Happens with materials containing the new Principal Shader.
Does not always happen, but if it happens with a material, it crashes every time regardless of what I do.
Note: This does NOT happen if I pack all textures into the blend-file. That's why I have include all textures as extra files.

This is just an example model. It happens to practically all models, regardless if I started them in 2.78 or 2.79.

Exact steps for others to reproduce the error
Example file: Sarah Kerrigan - Human - 06.7z

  1. Go to materials tab. (of selected object)
  2. Select any material.
  3. Click on the "+" to duplicate material
    Instant Crash
**System Information** Windows 7 64-Bit, Zotac GeForce GTX 1080 Ti, 11 GB, I7-4790K, 32 GB RAM **Blender Version** Broken: 2.79 RC 64-Bit, 2017-08-13, Hash: a8fbe99 (applies also to the previous RC of 2.79) Worked: 2.78.5 **Short Description** When duplicating a material, blender crashes instantly without any message. Happens with materials containing the new Principal Shader. Does not always happen, but if it happens with a material, it crashes every time regardless of what I do. Note: This does NOT happen if I pack all textures into the blend-file. That's why I have include all textures as extra files. This is just an example model. It happens to practically all models, regardless if I started them in 2.78 or 2.79. **Exact steps for others to reproduce the error** Example file: [Sarah Kerrigan - Human - 06.7z](https://archive.blender.org/developer/F710085/Sarah_Kerrigan_-_Human_-_06.7z) 1. Go to materials tab. (of selected object) 2. Select any material. 3. Click on the "+" to duplicate material Instant Crash

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @TLichtenberg

Added subscriber: @TLichtenberg

Added subscriber: @Sergey

Added subscriber: @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2017-08-14 14:39:46 +02:00

Bastien is currently bisecting the error.

Bastien is currently bisecting the error.

As I feared, caused by new ID copying code (which, btw, means issue is not in 2.79 branch & future release).

As I feared, caused by new ID copying code (which, btw, means issue is not in 2.79 branch & future release).

This issue was referenced by 3cd51c0379

This issue was referenced by 3cd51c0379638045cd32c9aa74215032d7bc381b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52391
No description provided.